feat: implemented /account
